--- a/src/index.html
+++ b/src/index.html
@@ -1,11 +1,1 @@
-<!DOCTYPE html>
-<html lang="hu">
-  <head>
-    <meta charset="utf-8" />
-    <title>Angular 21 Starter</title>
-    <base href="/" />
-  </head>
-  <body>
-    <app-root></app-root>
-  </body>
-</html>
+<!doctype html><html><body><app-root></app-root></body></html>
