--- a/src/index.html
+++ b/src/index.html
@@ -1,1 +1,12 @@
-<!doctype html><html><body><app-root></app-root></body></html>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+</head>
+<body>
+    <app-root></app-root>
+    
+</body>
+</html>
