--- a/src/index.html
+++ b/src/index.html
@@ -1,11 +1,5 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <title>Document</title>
-</head>
-
-  <body
-  ><app-root></app-root>
-</body>
+  <head><meta charset="utf-8"><title>ng21-full</title></head>
+  <body><app-root></app-root></body>
 </html>
