--- a/src/index.html
+++ b/src/index.html
@@ -1,9 +1,10 @@
-<<<<<<< Updated upstream
 <!DOCTYPE html>
 <html lang="en">
-  <head><meta charset="utf-8"><title>ng21-full</title></head>
-  <body><app-root></app-root></body>
+  <head><meta charset="utf-8">
+    <title>Document</title>
+  </head>
+
+  <body>
+    <app-root></app-root>
+  </body>
 </html>
-=======
-<!doctype html><html><body><app-root></app-root></body></html>
->>>>>>> Stashed changes
